@@ -89,14 +89,14 @@ public class CustomerPoolService {
                 .map(CustomerPoolDTO::getId)
                 .toList();
 
-        LambdaQueryWrapper<CustomerPoolPickRule> pickRuleWrapper = new LambdaQueryWrapper<>();
+        var pickRuleWrapper = new LambdaQueryWrapper<CustomerPoolPickRule>();
         pickRuleWrapper.in(CustomerPoolPickRule::getPoolId, poolIds);
 
         List<CustomerPoolPickRule> pickRules = customerPoolPickRuleMapper.selectListByLambda(pickRuleWrapper);
         Map<String, CustomerPoolPickRule> pickRuleMap = pickRules.stream()
                 .collect(Collectors.toMap(CustomerPoolPickRule::getPoolId, pickRule -> pickRule));
 
-        LambdaQueryWrapper<CustomerPoolRecycleRule> recycleRuleWrapper = new LambdaQueryWrapper<>();
+        var recycleRuleWrapper = new LambdaQueryWrapper<CustomerPoolRecycleRule>();
         recycleRuleWrapper.in(CustomerPoolRecycleRule::getPoolId, poolIds);
 
         List<CustomerPoolRecycleRule> recycleRules = customerPoolRecycleRuleMapper.selectListByLambda(recycleRuleWrapper);
@@ -115,9 +115,9 @@ public class CustomerPoolService {
             pool.setCreateUserName(userMap.get(pool.getCreateUser()));
             pool.setUpdateUserName(userMap.get(pool.getUpdateUser()));
 
-            CustomerPoolPickRuleDTO pickRule = new CustomerPoolPickRuleDTO();
+            var pickRule = new CustomerPoolPickRuleDTO();
             BeanUtils.copyBean(pickRule, pickRuleMap.get(pool.getId()));
-            CustomerPoolRecycleRuleDTO recycleRule = new CustomerPoolRecycleRuleDTO();
+            var recycleRule = new CustomerPoolRecycleRuleDTO();
             CustomerPoolRecycleRule customerPoolRecycleRule = recycleRuleMap.get(pool.getId());
             BeanUtils.copyBean(recycleRule, customerPoolRecycleRule);
             recycleRule.setConditions(JSON.parseArray(customerPoolRecycleRule.getCondition(), RuleConditionDTO.class));
@@ -162,7 +162,7 @@ public class CustomerPoolService {
 
     public List<CustomerPoolFieldConfigDTO> getFieldConfigs(List<BaseField> fields, Set<String> hiddenFieldIds) {
         return fields.stream().map(field -> {
-            CustomerPoolFieldConfigDTO hiddenFieldDTO = new CustomerPoolFieldConfigDTO();
+            var hiddenFieldDTO = new CustomerPoolFieldConfigDTO();
             hiddenFieldDTO.setFieldId(field.getId());
             hiddenFieldDTO.setFieldName(field.getName());
             hiddenFieldDTO.setEnable(!hiddenFieldIds.contains(field.getId()));
@@ -172,7 +172,7 @@ public class CustomerPoolService {
     }
 
     public List<CustomerPoolHiddenField> getCustomerPoolHiddenFieldByPoolIds(List<String> poolIds) {
-        LambdaQueryWrapper<CustomerPoolHiddenField> hiddenFieldWrapper = new LambdaQueryWrapper<>();
+        var hiddenFieldWrapper = new LambdaQueryWrapper<CustomerPoolHiddenField>();
         hiddenFieldWrapper.in(CustomerPoolHiddenField::getPoolId, poolIds);
         return customerPoolHiddenFieldMapper.selectListByLambda(hiddenFieldWrapper);
     }
@@ -185,7 +185,7 @@ public class CustomerPoolService {
      */
     @OperationLog(module = LogModule.SYSTEM_MODULE, type = LogType.ADD)
     public void add(CustomerPoolAddRequest request, String currentUserId, String organizationId) {
-        CustomerPool pool = new CustomerPool();
+        var pool = new CustomerPool();
         BeanUtils.copyBean(pool, request);
         pool.setId(IDGenerator.nextStr());
         pool.setOrganizationId(organizationId);
@@ -196,7 +196,7 @@ public class CustomerPoolService {
         pool.setUpdateTime(System.currentTimeMillis());
         pool.setUpdateUser(currentUserId);
         customerPoolMapper.insert(pool);
-        CustomerPoolPickRule pickRule = new CustomerPoolPickRule();
+        var pickRule = new CustomerPoolPickRule();
         BeanUtils.copyBean(pickRule, request.getPickRule());
         pickRule.setId(IDGenerator.nextStr());
         pickRule.setPoolId(pool.getId());
@@ -205,7 +205,7 @@ public class CustomerPoolService {
         pickRule.setUpdateUser(currentUserId);
         pickRule.setUpdateTime(System.currentTimeMillis());
         customerPoolPickRuleMapper.insert(pickRule);
-        CustomerPoolRecycleRule recycleRule = new CustomerPoolRecycleRule();
+        var recycleRule = new CustomerPoolRecycleRule();
         BeanUtils.copyBean(recycleRule, request.getRecycleRule());
         recycleRule.setId(IDGenerator.nextStr());
         try {
@@ -239,7 +239,7 @@ public class CustomerPoolService {
     @OperationLog(module = LogModule.SYSTEM_MODULE, type = LogType.UPDATE, resourceId = "{#request.id}")
     public void update(CustomerPoolUpdateRequest request, String currentUserId, String organizationId) {
         CustomerPool originCustomerPool = checkPoolExist(request.getId());
-        CustomerPool pool = new CustomerPool();
+        var pool = new CustomerPool();
         BeanUtils.copyBean(pool, request);
         pool.setOrganizationId(organizationId);
         pool.setOwnerId(JSON.toJSONString(request.getOwnerIds()));
@@ -247,13 +247,13 @@ public class CustomerPoolService {
         pool.setUpdateTime(System.currentTimeMillis());
         pool.setUpdateUser(currentUserId);
         customerPoolMapper.update(pool);
-        CustomerPoolPickRule pickRule = new CustomerPoolPickRule();
+        var pickRule = new CustomerPoolPickRule();
         BeanUtils.copyBean(pickRule, request.getPickRule());
         pickRule.setPoolId(pool.getId());
         pickRule.setUpdateUser(currentUserId);
         pickRule.setUpdateTime(System.currentTimeMillis());
         extCustomerPoolMapper.updatePickRule(pickRule);
-        CustomerPoolRecycleRule recycleRule = new CustomerPoolRecycleRule();
+        var recycleRule = new CustomerPoolRecycleRule();
         BeanUtils.copyBean(recycleRule, request.getRecycleRule());
         recycleRule.setPoolId(pool.getId());
         try {
@@ -285,7 +285,7 @@ public class CustomerPoolService {
         }
         List<CustomerPoolHiddenField> customerPoolHiddenFields = fieldIds.stream()
                 .map(fieldId -> {
-                    CustomerPoolHiddenField customerPoolHiddenField = new CustomerPoolHiddenField();
+                    var customerPoolHiddenField = new CustomerPoolHiddenField();
                     customerPoolHiddenField.setFieldId(fieldId);
                     customerPoolHiddenField.setPoolId(poolId);
                     return customerPoolHiddenField;
@@ -294,7 +294,7 @@ public class CustomerPoolService {
     }
 
     private void deleteCustomerPoolHiddenFieldByPoolId(String poolId) {
-        CustomerPoolHiddenField customerPoolHiddenField = new CustomerPoolHiddenField();
+        var customerPoolHiddenField = new CustomerPoolHiddenField();
         customerPoolHiddenField.setPoolId(poolId);
         customerPoolHiddenFieldMapper.delete(customerPoolHiddenField);
     }
@@ -305,7 +305,7 @@ public class CustomerPoolService {
      * @param id 线索池ID
      */
     public boolean checkNoPick(String id) {
-        LambdaQueryWrapper<Customer> wrapper = new LambdaQueryWrapper<>();
+        var wrapper = new LambdaQueryWrapper<Customer>();
         wrapper.eq(Customer::getPoolId, id)
                 .eq(Customer::getInSharedPool, true);
         List<Customer> relations = customerMapper.selectListByLambda(wrapper);
@@ -319,10 +319,10 @@ public class CustomerPoolService {
     public void delete(String id) {
         checkPoolExist(id);
         customerPoolMapper.deleteByPrimaryKey(id);
-        CustomerPoolPickRule pickRule = new CustomerPoolPickRule();
+        var pickRule = new CustomerPoolPickRule();
         pickRule.setPoolId(id);
         customerPoolPickRuleMapper.delete(pickRule);
-        CustomerPoolRecycleRule recycleRule = new CustomerPoolRecycleRule();
+        var recycleRule = new CustomerPoolRecycleRule();
         recycleRule.setPoolId(id);
         customerPoolRecycleRuleMapper.delete(recycleRule);
         deleteCustomerPoolHiddenFieldByPoolId(id);
@@ -377,7 +377,7 @@ public class CustomerPoolService {
      * @return 默认公海
      */
     public Map<String, CustomerPool> getOwnersDefaultPoolMap(List<String> ownerIds, String organizationId) {
-        Map<String, CustomerPool> poolMap = new HashMap<>(4);
+        var poolMap = new HashMap<String, CustomerPool>(4);
         List<CustomerPool> pools = extCustomerPoolMapper.getAllPool(organizationId);
         Map<String, List<String>> ownerScopeMap = userExtendService.getMultiScopeMap(ownerIds, organizationId);
         ownerIds.forEach(ownerId -> {
@@ -413,7 +413,7 @@ public class CustomerPoolService {
                     return CollectionUtils.isNotEmpty(poolScopes) && CollectionUtils.containsAny(scopeIds, poolScopes);
                 })
                 .sorted(Comparator.comparing(CustomerPool::getCreateTime).reversed())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -443,7 +443,7 @@ public class CustomerPoolService {
      * @return 公海集合
      */
     public Map<List<String>, CustomerPool> getOwnersBestMatchPoolMap(List<CustomerPool> pools) {
-        Map<List<String>, CustomerPool> poolMap = new HashMap<>(4);
+        var poolMap = new HashMap<List<String>, CustomerPool>(4);
         pools.sort(Comparator.comparing(CustomerPool::getCreateTime).reversed());
         for (CustomerPool pool : pools) {
             List<String> exitOwnerIds = poolMap.keySet().stream().flatMap(List::stream).toList();
